Fixed critical GitHub API error.